SBVTestSuite/TestSuite/CompileTests/SCase/SCase10.stderr
SCase10.hs:11:14: error: [GHC-39584]
    " SCase10.hs:13:16-26: sCase: Unsupported complex pattern match.
        Saw: (Num i)

      Only variables and wild-card are supported.

    " In the quasi-quotation:
        [sCase|Expr e of
               Zero          -> 0
               Num (Num i)   -> i
               Viar s         -> ite (s .== "a") 1 2
               Add a b       -> t e + t b
               Let _   _a  b -> t b
      |]
   |
11 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

